Added dropdown menu and autoscroll

--- a/UBC-Course-Table.html
+++ b/UBC-Course-Table.html
@@ -15,10 +15,25 @@
 [ubccourses department="PLNT" stickyyear="true" stickywinter="w"] 
 [ubccourses department="SOIL" stickyyear="true" stickywinter="w"] 
 </div>
-<div class="container" id="searchContainer">  
+<div class="container" id="searchContainer"> </div>
+<div class="dropdown div-inline">
+    <button class="btn btn-inverse dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Course Code<div class="ubc7-arrow down-arrow accordion-arrow"></div> </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+        <li><button id="AANB" type="button" class="btn btn-link">AANB</button></li>
+        <li><button id="APBI" type="button" class="btn btn-link">APBI</button></li>
+        <li><button id="FNH" type="button" class="btn btn-link">FNH</button></li>
+        <li><button id="FOOD" type="button" class="btn btn-link">FOOD</button></li>
+        <li><button id="FRE" type="button" class="btn btn-link">FRE</button></li>
+        <li><button id="GRS" type="button" class="btn btn-link">GRS</button></li>
+        <li><button id="HUNU" type="button" class="btn btn-link">HUNU</button></li>
+        <li><button id="LFS" type="LFS" class="btn btn-link">LFS</button></li>
+        <li><button id="PLNT" type="button" class="btn btn-link">PLNT</button></li>
+        <li><button id="SOIL" type="button" class="btn btn-link">SOIL</button></li>
+    </ul>
 </div>
 <input type="text" id="searchbox" placeholder="Course Search">
-
+<button id="go" type="button" class="btn btn-primary">Go</button>
+<!--<button id="AANB" type="button" class="btn btn-primary">AANB</button>-->
 <table id="courses" class="display">
     <thead>
         <tr>
@@ -32,5 +47,4 @@
 <script src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js" type="text/javascript" charset="utf8"></script>
 <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
-
 <a href="http://lfs250.landfood.ubc.ca/>LFS250 Blog</a>
