Made a legend for the course codes

--- a/UBC-Course-Table.html
+++ b/UBC-Course-Table.html
@@ -1,19 +1,19 @@
 <div class="outer">
-    <div class="inner"> 
+    <div class="inner">
         [ubccourses department="AANB" course="500" stickyyear="true" stickywinter="w"]
     </div>
 </div>
-<div class="invisible"> 
+<div class="invisible">
 [ubccourses department="AANB" stickyyear="true" stickywinter="w"]
-[ubccourses department="APBI" stickyyear="true" stickywinter="w"] 
-[ubccourses department="FNH" stickyyear="true" stickywinter="w"] 
-[ubccourses department="FOOD" stickyyear="true" stickywinter="w"] 
-[ubccourses department="FRE" stickyyear="true" stickywinter="w"] 
-[ubccourses department="GRS" stickyyear="true" stickywinter="w"] 
-[ubccourses department="HUNU" stickyyear="true" stickywinter="w"] 
-[ubccourses department="LFS" stickyyear="true" stickywinter="w"] 
-[ubccourses department="PLNT" stickyyear="true" stickywinter="w"] 
-[ubccourses department="SOIL" stickyyear="true" stickywinter="w"] 
+[ubccourses department="APBI" stickyyear="true" stickywinter="w"]
+[ubccourses department="FNH" stickyyear="true" stickywinter="w"]
+[ubccourses department="FOOD" stickyyear="true" stickywinter="w"]
+[ubccourses department="FRE" stickyyear="true" stickywinter="w"]
+[ubccourses department="GRS" stickyyear="true" stickywinter="w"]
+[ubccourses department="HUNU" stickyyear="true" stickywinter="w"]
+[ubccourses department="LFS" stickyyear="true" stickywinter="w"]
+[ubccourses department="PLNT" stickyyear="true" stickywinter="w"]
+[ubccourses department="SOIL" stickyyear="true" stickywinter="w"]
 </div>
 <div class="container" id="searchContainer"> </div>
 <div class="dropdown div-inline">
@@ -33,6 +33,7 @@
 </div>
 <input type="text" id="searchbox" placeholder="Course Search">
 <button id="go" type="button" class="btn btn-primary">Go</button>
+<div class="span8">AANB: Applied Animal Biology &nbsp; APBI: Applied Biology &nbsp; FNH: Food, Nutrition and Health &nbsp; FOOD: Food Sciences &nbsp; FRE: Food and Resource Economics &nbsp;  GRS: Global Resource Systems &nbsp; HUNU: Human Nutrition &nbsp; LFS: Land &amp; Food Systems &nbsp; PLNT: Plant Science &nbsp; SOIL: Soil Science</div>
 <!--<button id="AANB" type="button" class="btn btn-primary">AANB</button>-->
 <table id="courses" class="display">
     <thead>
@@ -47,4 +48,3 @@
 <script src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js" type="text/javascript" charset="utf8"></script>
 <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
-<a href="http://lfs250.landfood.ubc.ca/>LFS250 Blog</a>
